@@ -1,7 +1,10 @@
 package faculdade.donaduzzi.folksflowbackend.services;
 
-import faculdade.donaduzzi.folksflowbackend.model.DTO.StatusRequest;
-import faculdade.donaduzzi.folksflowbackend.model.DTO.StatusResponse;
+import faculdade.donaduzzi.folksflowbackend.infra.exceptions.BusinessException;
+
+import faculdade.donaduzzi.folksflowbackend.model.dto.StatusRequest;
+import faculdade.donaduzzi.folksflowbackend.model.dto.StatusResponse;
+import faculdade.donaduzzi.folksflowbackend.model.dto.StatusUpdateRequest;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Project;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Status;
 import faculdade.donaduzzi.folksflowbackend.repository.ProjectRepository;
@@ -12,7 +15,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,13 +27,13 @@ public class StatusService {
         return statusRepository.findByProject(projectId)
                 .stream()
                 .map(StatusResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public StatusResponse create(StatusRequest request) {
         Project project = projectRepository.findById(request.getProjectId())
-                .orElseThrow(() -> new RuntimeException("Project not found"));
+                .orElseThrow(() -> new BusinessException("Project not found"));
 
         Status status = new Status();
         status.setName(request.getName());
@@ -56,12 +58,24 @@ public class StatusService {
     @Transactional
     public void delete(Integer id) {
         Status status = statusRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Status not found"));
+                .orElseThrow(() -> new BusinessException("Status not found"));
         statusRepository.delete(status);
+    }
+
+    @Transactional
+    public StatusResponse update(Integer id, StatusUpdateRequest request) {
+        Status status = findById(id);
+        status.setName(request.getName());
+        status.setColor(request.getColor());
+        if (request.getIsFinalStatus() != null) {
+            status.setIsFinalStatus(request.getIsFinalStatus());
+        }
+        status.setUpdatedAt(LocalDateTime.now());
+        return StatusResponse.fromEntity(statusRepository.save(status));
     }
 
     public Status findById(Integer id) {
         return statusRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Status not found"));
+                .orElseThrow(() -> new BusinessException("Status not found"));
     }
 }
