@@ -1,7 +1,9 @@
 package faculdade.donaduzzi.folksflowbackend.services;
 
-import faculdade.donaduzzi.folksflowbackend.model.DTO.TagRequest;
-import faculdade.donaduzzi.folksflowbackend.model.DTO.TagResponse;
+import faculdade.donaduzzi.folksflowbackend.infra.exceptions.BusinessException;
+
+import faculdade.donaduzzi.folksflowbackend.model.dto.TagRequest;
+import faculdade.donaduzzi.folksflowbackend.model.dto.TagResponse;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Space;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Tag;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Task;
@@ -14,7 +16,6 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -28,13 +29,13 @@ public class TagService {
         return tagRepository.findBySpaceSpaceId(spaceId)
                 .stream()
                 .map(TagResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public TagResponse create(TagRequest request) {
         Space space = spaceRepository.findById(request.getSpaceId())
-                .orElseThrow(() -> new RuntimeException("Space not found"));
+                .orElseThrow(() -> new BusinessException("Space not found"));
 
         Tag tag = new Tag();
         tag.setName(request.getName());
@@ -47,11 +48,22 @@ public class TagService {
     @Transactional
     public void associateWithTask(Integer taskId, Integer tagId) {
         Task task = taskRepository.findById(taskId)
+                .orElseThrow(() -> new BusinessException("Task not found"));
+        Tag tag = tagRepository.findById(tagId)
+                .orElseThrow(() -> new BusinessException("Tag not found"));
+
+        task.getTags().add(tag);
+        taskRepository.save(task);
+    }
+
+    @Transactional
+    public void disassociateFromTask(Integer taskId, Integer tagId) {
+        Task task = taskRepository.findById(taskId)
                 .orElseThrow(() -> new RuntimeException("Task not found"));
         Tag tag = tagRepository.findById(tagId)
                 .orElseThrow(() -> new RuntimeException("Tag not found"));
 
-        task.getTags().add(tag);
+        task.getTags().remove(tag);
         taskRepository.save(task);
     }
 }
