@@ -1,7 +1,10 @@
 package faculdade.donaduzzi.folksflowbackend.services;
 
-import faculdade.donaduzzi.folksflowbackend.model.DTO.TaskRequest;
-import faculdade.donaduzzi.folksflowbackend.model.DTO.TaskResponse;
+import faculdade.donaduzzi.folksflowbackend.infra.exceptions.BusinessException;
+
+import faculdade.donaduzzi.folksflowbackend.model.dto.ChecklistItemResponse;
+import faculdade.donaduzzi.folksflowbackend.model.dto.TaskRequest;
+import faculdade.donaduzzi.folksflowbackend.model.dto.TaskResponse;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Priority;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Status;
 import faculdade.donaduzzi.folksflowbackend.model.entities.Task;
@@ -21,10 +24,11 @@ import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.stream.Collectors;
+
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -42,26 +46,55 @@ public class TaskService {
         return taskRepository.findOverdueTasks(LocalDate.now())
                 .stream()
                 .map(TaskResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<TaskResponse> findAllByStatus(Integer statusId) {
         return taskRepository.findAll().stream()
                 .filter(t -> t.getStatus().getStatusId().equals(statusId))
                 .map(TaskResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Task findById(Integer id) {
         return taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Task not found"));
+                .orElseThrow(() -> new BusinessException("Task not found"));
+    }
+
+    public TaskResponse getById(Integer id) {
+        return TaskResponse.fromEntity(findById(id));
+    }
+
+    public List<TaskResponse> getMyTasks(Integer userId) {
+        return taskRepository.findAllTaskByUser(userId)
+                .stream()
+                .map(TaskResponse::fromEntity)
+                .collect(Collectors.toList());
+    }
+
+    @Transactional
+    public TaskResponse update(Integer id, TaskRequest request) {
+        Task task = findById(id);
+        Status status = statusService.findById(request.getStatusId());
+        Priority priority = priorityRepository.findById(request.getPriorityId())
+                .orElseThrow(() -> new RuntimeException("Priority not found"));
+
+        task.setTitle(request.getTitle());
+        task.setDescription(request.getDescription());
+        task.setStatus(status);
+        task.setPriority(priority);
+        task.setDueDate(request.getDueDate());
+        task.setEstimatedHours(request.getEstimatedHours());
+        task.setUpdatedAt(LocalDateTime.now());
+
+        return TaskResponse.fromEntity(taskRepository.save(task));
     }
 
     @Transactional
     public TaskResponse create(TaskRequest request, User author) {
         Status status = statusService.findById(request.getStatusId());
         Priority priority = priorityRepository.findById(request.getPriorityId())
-                .orElseThrow(() -> new RuntimeException("Priority not found"));
+                .orElseThrow(() -> new BusinessException("Priority not found"));
 
         Task task = new Task();
         task.setTitle(request.getTitle());
@@ -116,7 +149,7 @@ public class TaskService {
     public void assignUser(Integer taskId, Integer userId) {
         Task task = findById(taskId);
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
+                .orElseThrow(() -> new BusinessException("User not found"));
 
         UserTask userTask = new UserTask();
         userTask.setId(new UserTask.UserTaskId(taskId, userId));
@@ -143,6 +176,13 @@ public class TaskService {
         taskRepository.save(task);
     }
 
+    public List<ChecklistItemResponse> getChecklistItems(Integer taskId) {
+        return checklistItemRepository.findByTaskTaskId(taskId)
+                .stream()
+                .map(ChecklistItemResponse::fromEntity)
+                .collect(Collectors.toList());
+    }
+
     @Transactional
     public void addChecklistItem(Integer taskId, String content) {
         Task task = findById(taskId);
@@ -158,7 +198,7 @@ public class TaskService {
     @Transactional
     public void toggleChecklistItem(Integer itemId) {
         faculdade.donaduzzi.folksflowbackend.model.entities.ChecklistItem item = checklistItemRepository.findById(itemId)
-                .orElseThrow(() -> new RuntimeException("Checklist item not found"));
+                .orElseThrow(() -> new BusinessException("Checklist item not found"));
         item.setIsCompleted(!item.getIsCompleted());
         item.setUpdatedAt(LocalDateTime.now());
         checklistItemRepository.save(item);
@@ -168,7 +208,7 @@ public class TaskService {
     public void startTime(Integer taskId, User user) {
         Task task = findById(taskId);
         timeEntryRepository.findByTaskAndUserAndEndTimeIsNull(task, user)
-                .ifPresent(te -> { throw new RuntimeException("Timer already running for this task and user"); });
+                .ifPresent(te -> { throw new BusinessException("Timer already running for this task and user"); });
 
         faculdade.donaduzzi.folksflowbackend.model.entities.TimeEntry entry = new faculdade.donaduzzi.folksflowbackend.model.entities.TimeEntry();
         entry.setTask(task);
@@ -181,7 +221,7 @@ public class TaskService {
     public void stopTime(Integer taskId, User user) {
         Task task = findById(taskId);
         faculdade.donaduzzi.folksflowbackend.model.entities.TimeEntry entry = timeEntryRepository.findByTaskAndUserAndEndTimeIsNull(task, user)
-                .orElseThrow(() -> new RuntimeException("No running timer found for this task and user"));
+                .orElseThrow(() -> new BusinessException("No running timer found for this task and user"));
 
         entry.setEndTime(LocalDateTime.now());
         long minutes = java.time.Duration.between(entry.getStartTime(), entry.getEndTime()).toMinutes();
